--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Walkin_Map</string>
     <string name="title_activity_maps">MapsActivity</string>
+    <string name="title_activity_finder2">FinderActivity2</string>
 </resources>
